objects/pse__Resource_Replacement__c.object
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Controls configuration for the Multiple Resource Replacement UI.</description>
    <fields>
        <fullName>pse__Records_Per_Page__c</fullName>
        <defaultValue>10</defaultValue>
        <description>Maximum number of records to display on each page of the filter results section for each object type.</description>
        <inlineHelpText>Maximum number of records to display on each page of the filter results section for each object type.</inlineHelpText>
        <label>Records Per Page</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>pse__Show_All_Records__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true all records are shown on the Multiple Resource Replacement page for the selected project when no filter criteria are set. When false (default), no records are shown.</description>
        <inlineHelpText>When true all records are shown on the Multiple Resource Replacement page for the selected project when no filter criteria are set. When false (default), no records are shown.</inlineHelpText>
        <label>Show All Records</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Assignments__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When true (default), assignments are shown on the Multiple Resource Replacement page. When false, assignments are not shown.</description>
        <inlineHelpText>When true (default), assignments are shown on the Multiple Resource Replacement page. When false, assignments are not shown.</inlineHelpText>
        <label>Show Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Project_Task_Assignments__c</fullName>
        <defaultValue>true</defaultValue>
        <description>When true (default), project task assignments are shown on the Multiple Resource Replacement page. When false, project task assignments are not shown.</description>
        <inlineHelpText>When true (default), project task assignments are shown on the Multiple Resource Replacement page. When false, project task assignments are not shown.</inlineHelpText>
        <label>Show Project Task Assignments</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pse__Show_Resource_Requests__c</fullName>
        <defaultValue>false</defaultValue>
        <description>When true, resource requests are shown on the Multiple Resource Replacement page. When false (default), resource requests are not shown.</description>
        <inlineHelpText>When true, resource requests are shown on the Multiple Resource Replacement page. When false (default), resource requests are not shown.</inlineHelpText>
        <label>Show Resource Requests</label>
        <type>Checkbox</type>
    </fields>
    <label>Resource Replacement</label>
</CustomObject>